test/logs.txt
In file included from ../set_tests/insert(hint).cpp:1:
In file included from ../set_tests/../system/system_methods.ipp:2:
In file included from ../set_tests/../system/lib.hpp:30:
../set_tests/../system/Alloc.hpp:55:27: warning: variadic templates are a C++11 extension [-Wc++11-extensions]
template <class _Up, class... _Args>
                          ^
../set_tests/../system/Alloc.hpp:58:34: warning: rvalue references are a C++11 extension [-Wc++11-extensions]
        construct(_Up* __p, _Args&&... __args)
                                 ^
../set_tests/../system/Alloc.hpp:164:27: warning: variadic templates are a C++11 extension [-Wc++11-extensions]
template <class _Up, class... _Args>
                          ^
../set_tests/../system/Alloc.hpp:167:34: warning: rvalue references are a C++11 extension [-Wc++11-extensions]
        construct(_Up* __p, _Args&&... __args)
                                 ^
4 warnings generated.
d.
/set_tests/compare class.cpp:2:
In file included from ../set_tests/__service.ipp:3:
../set_tests/../../../set.tpp:249:43: error: no matching function for call to object of type 'std::greater<int>'
            _node* node = this->find(key, _comp());
                                          ^~~~~
../set_tests/compare class.cpp:63:9: note: in instantiation of member function 'ft::set<int, std::greater<int> >::erase' requested here
    st1.erase(41);
        ^
../set_tests/compare class.cpp:106:67: note: in instantiation of function template specialization 'comparator_test<int>' requested here
    exit(run_set_unit_test<int>("compare class", comparator_test, comparator_test));
                                                                  ^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/__functional/operations.h:597:10: note: candidate function not viable: requires 2 arguments, but 0 were provided
    bool operator()(const _Tp& __x, const _Tp& __y) const
         ^
In file included from ../set_tests/compare class.cpp:2:
In file included from ../set_tests/__service.ipp:3:
../set_tests/../../../set.tpp:253:50: error: no matching function for call to object of type 'std::greater<int>'
            return (!this->isNul(this->find(key, _comp()))) ? 1 : 0;;
                                                 ^~~~~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/__functional/operations.h:597:10: note: candidate function not viable: requires 2 arguments, but 0 were provided
    bool operator()(const _Tp& __x, const _Tp& __y) const
         ^
4 warnings and 2 errors generated.
